--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,19 @@ services:
     build: .
     ports:
       - "80:8000"
+    depends_on:
+      - db
     volumes:
       - .:/quasar
+    restart: always
+  db:
+    image: postgres:13
+    environment:
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_DB: "postgres"
+    ports:
+      - "5432:5432"
+    volumes:
+      - .data:/var/lib/postgresql/data/
     restart: always
