--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,13 @@
 [tool.poetry]
-name = "simpledeploy"
+name = "fastapi"
 version = "0.1.0"
 description = ""
 authors = ["alexandrejastrow <alexandre.jastrow@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-django-oauth-toolkit = "^2.1.0"
-djangorestframework = "^3.13.1"
-Django = "^4.0.6"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
